# verse

./: .gitignore  Cargo.toml  README.md  build.sh  index.html  rust-toolchain.toml
.github/workflows/: pages.yml
assets/: character.glb  dump-pose.py  human.skeleton.json  inspect-glb.py  james.character.json  leg-pose.json  pose.json  sitting.pose.json  standing-idle.glb  standing.pose.json
content/: hello.lila
examples/: animation.rs  leg.rs  mixamo.rs  pose.rs  stick-figure.rs
pkg/: package.json  verse.d.ts  verse.js  verse_bg.wasm  verse_bg.wasm.d.ts
src/: camera.rs  lib.rs  main.rs  resources.rs  shader.wgsl
