[package]
name = "verse"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

#[lib]
#crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = "0.18"


[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
